# air-pollution-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: collect-data.yml  daily-etl.yml  dbt-test.yml
air_pollution_analytics/: .user.yml  dbt_project.yml  profiles.yml.example
air_pollution_analytics/models/staging/: schema.yml  sources.yml  staging.yml.bak  stg_annual_mean.sql  stg_o3_8h_rolling.sql  stg_o3_peak_season.sql  stg_rolling_24h_mean.sql
air_pollution_analytics/seeds/: cities.csv
air_pollution_analytics/tests/generic/: test_daily_data_completeness.sql
air_pollution_analytics/tests/singular/: test_pm25_pm10_relationship.sql
air_pollution_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: bq.yml  bq.yml.example  cities.yml  pollutants.yml
src/raw_data_collection/: air_pollution_collector.py  bq_dataset_creation.py  main.py
src/utils/: __init__.py  bq_utils.py
src/web_app/: app.py  data.py  pages.py  plots.py  utils.py
